# ball_contrib

./: CMakeLists.txt
cmake/: BALLContribConfig.cmake  BALLContribMacros.cmake  ContribSetup.cmake
libraries/: bison.cmake  boost.cmake  eigen3.cmake  fftw.cmake  flex.cmake  glew.cmake  oncrpc.cmake  openbabel.cmake  qt.cmake  sip.cmake  tbb.cmake
